<resources>
    <string name="app_name">yota</string>
    <string name="balance">Баланс</string>

    <string name="card_number_formatted">* %1$d</string>
    <string name="value_progress_current_formatted">из %1$d</string>
    <string name="money">Деньги</string>
    <string name="balance_description">Общая сумма на 30 дней</string>
    <string name="mobile_connection">Связь</string>
    <string name="services_apps_title">Безлимитные мобильные приложения</string>
    <string name="error_1">Произошла ошибка</string>
    <string name="repeat">Повторить</string>
    <string name="minutes_left">Осталось минут</string>
    <string name="minutes">Минуты</string>
    <string name="gigabytes_left">Осталось гагайбайт</string>
    <string name="gigabytes">Гагайбайты</string>
    <string name="next_payment">Следующее списание %1$s</string>
    <string name="collapse">Свернуть</string>
    <string name="expand">Развернуть</string>
    <string name="submit">Подтвержить изменения</string>
</resources>
