<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <app.yota.view.GradientTextView
        android:id="@+id/gradientTextView"
        style="@style/Yota.Text.GradientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="@dimen/services_card_horizontal_margin"
        android:layout_marginTop="11dp"
        android:gravity="center"
        android:text="@string/mobile_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone_number_text_view"
        style="@style/Yota.Text.Title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/phone_number_background"
        android:gravity="center"
        android:paddingStart="@dimen/phone_number_horizontal_padding"
        android:paddingTop="@dimen/phone_number_vertical_padding"
        android:paddingEnd="@dimen/phone_number_horizontal_padding"
        android:paddingBottom="@dimen/phone_number_vertical_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="+7 999 656-88-78" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Yota.Text.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/services_card_horizontal_margin"
        android:text="@string/balance_description"
        app:layout_constraintBottom_toBottomOf="@id/total_amount_value_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/total_amount_value_text_view" />

    <TextView
        android:id="@+id/total_amount_value_text_view"
        style="@style/Yota.Text.Title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:gravity="center"
        android:paddingStart="@dimen/phone_number_horizontal_padding"
        android:paddingTop="@dimen/phone_number_vertical_padding"
        android:paddingEnd="@dimen/phone_number_horizontal_padding"
        android:paddingBottom="@dimen/phone_number_vertical_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_text_view"
        tools:text="450 ₽" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/services_card_horizontal_margin"
        android:layout_marginEnd="@dimen/services_card_horizontal_margin"
        android:background="#E8F1FA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_amount_value_text_view" />

    <TextView
        android:id="@+id/textView6"
        style="@style/Yota.Text.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/services_card_horizontal_margin"
        android:layout_marginTop="5dp"
        android:text="@string/services_apps_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/social_icon_size"
        android:layout_height="@dimen/social_icon_size"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_sms"
        app:layout_constraintStart_toStartOf="@id/textView6"
        app:layout_constraintTop_toBottomOf="@id/textView6" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/social_icon_size"
        android:layout_height="@dimen/social_icon_size"
        android:layout_marginStart="@dimen/social_icon_start_margin"
        android:src="@drawable/ic_sms"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/social_icon_size"
        android:layout_height="@dimen/social_icon_size"
        android:layout_marginStart="@dimen/social_icon_start_margin"
        android:src="@drawable/ic_sms"
        app:layout_constraintBottom_toBottomOf="@id/imageView3"
        app:layout_constraintStart_toEndOf="@id/imageView3"
        app:layout_constraintTop_toTopOf="@id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        style="@style/Yota.Text.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/minutes_left"
        app:layout_constraintEnd_toStartOf="@id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />


    <TextView
        android:id="@+id/textView8"
        style="@style/Yota.Text.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gigabytes_left"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <app.yota.view.valueprogress.ValueProgressView
        android:id="@+id/minutes_value_progress_view"
        android:layout_width="@dimen/value_progress_view_size"
        android:layout_height="@dimen/value_progress_view_size"
        app:layout_constraintEnd_toEndOf="@id/textView7"
        app:layout_constraintStart_toStartOf="@id/textView7"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <app.yota.view.valueprogress.ValueProgressView
        android:id="@+id/gigabytes_value_progress_view"
        android:layout_width="@dimen/value_progress_view_size"
        android:layout_height="@dimen/value_progress_view_size"
        app:layout_constraintEnd_toEndOf="@id/textView8"
        app:layout_constraintStart_toStartOf="@id/textView8"
        app:layout_constraintTop_toBottomOf="@id/textView8" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/services_card_horizontal_margin"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/services_card_horizontal_margin"
        android:background="#E8F1FA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gigabytes_value_progress_view" />

    <TextView
        android:id="@+id/next_payment_text_view"
        style="@style/Yota.Text.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/services_card_horizontal_margin"
        android:layout_marginTop="16dp"
        android:text="@string/next_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <app.yota.view.ExpandableView
        android:id="@+id/expandable_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:isExpanded="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_payment_text_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="26dp">

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/services_card_horizontal_margin"
                android:layout_marginEnd="@dimen/services_card_horizontal_margin"
                android:background="#E8F1FA"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Yota.Text.Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/services_card_horizontal_margin"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/minutes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                app:layout_constraintVertical_chainStyle="packed" />

            <app.yota.view.ValuePickerView
                android:id="@+id/valuePickerView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/services_card_horizontal_margin"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/services_card_horizontal_margin"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                style="@style/Yota.Text.Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/services_card_horizontal_margin"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/gigabytes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valuePickerView"
                app:layout_constraintVertical_chainStyle="packed" />

            <app.yota.view.ValuePickerView
                android:id="@+id/valuePickerView2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/services_card_horizontal_margin"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/services_card_horizontal_margin"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/services_card_horizontal_margin"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/services_card_horizontal_margin"
                android:text="@string/submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valuePickerView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </app.yota.view.ExpandableView>
</androidx.constraintlayout.widget.ConstraintLayout>