<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="app.yota.view.ServicesCardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <app.yota.view.GradientTextView
            style="@style/Yota.Text.GradientTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:text="@string/mobile_connection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phone_number_text_view"
            style="@style/Yota.Text.Title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/phone_number_background"
            android:gravity="center"
            android:paddingStart="@dimen/phone_number_horizontal_padding"
            android:paddingTop="@dimen/phone_number_vertical_padding"
            android:paddingEnd="@dimen/phone_number_horizontal_padding"
            android:paddingBottom="@dimen/phone_number_vertical_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="+7 999 656-88-78" />

        <TextView
            android:id="@+id/textView4"
            style="@style/Yota.Text.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/balance_description"
            app:layout_constraintBottom_toBottomOf="@id/balance_value_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/balance_value_text_view" />

        <TextView
            android:id="@+id/balance_value_text_view"
            style="@style/Yota.Text.Title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="17dp"
            android:gravity="center"
            android:paddingStart="@dimen/phone_number_horizontal_padding"
            android:paddingTop="@dimen/phone_number_vertical_padding"
            android:paddingEnd="@dimen/phone_number_horizontal_padding"
            android:paddingBottom="@dimen/phone_number_vertical_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number_text_view"
            tools:text="450 ₽" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#E8F1FA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balance_value_text_view" />

        <TextView
            android:id="@+id/textView6"
            style="@style/Yota.Text.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/services_apps_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/textView7"
            style="@style/Yota.Text.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Осталось минут"
            app:layout_constraintEnd_toStartOf="@id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6" />


        <TextView
            android:id="@+id/textView8"
            style="@style/Yota.Text.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Осталось гагайбайт"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView7"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <app.yota.view.valueprogress.ValueProgressView
            android:id="@+id/minutes_value_progress_view"
            android:layout_width="@dimen/value_progress_view_size"
            android:layout_height="@dimen/value_progress_view_size"
            app:layout_constraintEnd_toEndOf="@id/textView7"
            app:layout_constraintStart_toStartOf="@id/textView7"
            app:layout_constraintTop_toBottomOf="@id/textView7" />

        <app.yota.view.valueprogress.ValueProgressView
            android:id="@+id/gigabytes_value_progress_view"
            android:layout_width="@dimen/value_progress_view_size"
            android:layout_height="@dimen/value_progress_view_size"
            app:layout_constraintEnd_toEndOf="@id/textView8"
            app:layout_constraintStart_toStartOf="@id/textView8"
            app:layout_constraintTop_toBottomOf="@id/textView8" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="#E8F1FA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gigabytes_value_progress_view" />

        <TextView
            android:id="@+id/textView9"
            style="@style/Yota.Text.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:text="Следующее списание 23 марта"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>
